modify nginx config

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,57 +9,31 @@ worker_processes auto;
 
 
 events {
-    worker_connections   40960;
-    use epoll;
-    multi_accept on;
+    worker_connections  1024;
 }
 
 
 http {
-    keepalive_timeout 65;
-    keepalive_requests 100000;
-    sendfile         on;
-    tcp_nopush       on;
-    tcp_nodelay      on;
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    client_body_buffer_size    128k;
-    client_max_body_size       10m;
-    client_header_buffer_size    1k;
-    large_client_header_buffers  4 4k;
-    output_buffers   1 32k;
-    postpone_output  1460;
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    client_header_timeout  3m;
-    client_body_timeout    3m;
-    send_timeout           3m;
+    #access_log  logs/access.log  main;
 
-    open_file_cache max=1000 inactive=20s;
-    open_file_cache_valid 30s;
-    open_file_cache_min_uses 5;
-    open_file_cache_errors off;
+    sendfile        on;
+    #tcp_nopush     on;
 
-    gzip on;
-    gzip_min_length  1000;
-    gzip_buffers     4 4k;
-    gzip_types       text/html application/x-javascript text/css application/javascript text/javascript text/plain text/xml application/json application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype application/x-font-ttf application/xml font/eot font/opentype font/otf image/svg+xml image/vnd.microsoft.icon;
-    gzip_disable "MSIE [1-6]\.";
+    #keepalive_timeout  0;
+    keepalive_timeout 2;
+	client_max_body_size 100m;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    ##
-    # SSL Settings
-    ##
-
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-    ssl_prefer_server_ciphers on;
-
-
-    ##
-    # Virtual Host Configs
-    ##
+    server_tokens off;
+    #gzip  on;
 
     include /etc/nginx/sites-enabled/*;
 }
-
+daemon off;
 
