--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -1,34 +1,59 @@
 server {
-
 	listen   80; ## listen for ipv4; this line is default and implied
-    listen   [::]:80 default ipv6only=on; ## listen for ipv6
+	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-    root /var/www/html/public;
-    index index.php index.html index.htm;
+	root /var/www/html/public;
+	index index.php index.html index.htm;
 
-    # Make site accessible from http://localhost/
-    server_name _;
+	# Make site accessible from http://localhost/
+	server_name _;
+	
+	# Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
+	# sendfile off;
 
-    error_log /dev/stdout info;
-    access_log /dev/stdout;
+	# Add stdout logging
+	error_log /dev/stdout info;
+	access_log /dev/stdout;
+
+        # Add option for x-forward-for (real ip when behind elb)
+        #real_ip_header X-Forwarded-For;
+        #set_real_ip_from 172.16.0.0/12;
 
 	location / {
 
-        client_max_body_size       1000m;
-        client_body_buffer_size    256m;
+        client_max_body_size       100m;
+        client_body_buffer_size    256k;
 		try_files $uri $uri/ /index.php?$args;
 	}
 
-	location ~ \.php$ {
-		fastcgi_pass unix:/var/run/php-fpm.sock;
+	error_page 404 /404.html;
+        location = /404.html {
+                root /var/www/errors;
+                internal;
+        }
 
-        fastcgi_buffers                 16 16k;
-        fastcgi_buffer_size             16k;
-        fastcgi_busy_buffers_size       32k;
-        fastcgi_read_timeout 300;
+        location ^~ /ngd-style.css {
+            alias /var/www/errors/style.css;
+            access_log off;
+        }
+
+        location ^~ /ngd-sad.svg {
+            alias /var/www/errors/sad.svg;
+            access_log off;
+        }
+
+	# pass the PHP scripts to FastCGI server listening on socket
+	#
+	location ~ \.php$ {
+                try_files $uri =404;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass unix:/var/run/php-fpm.sock;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_index index.php;
+		include fastcgi_params;
 	}
 
-    # Tell the browser to cache the static contents with cache-control
     location ~ ^/(img|cjs|ccss)/ {
         error_page 404 = /index.php?$query_string;
         access_log      off;
@@ -40,12 +65,12 @@ server {
     # Tell the browser to cache the static contents with cache-control
     # Use this as an alternative case if we still have any static contents that isn't being cached.
 
-    location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
-        error_page 404 = /index.php?$query_string;
-        expires 365d;
-        access_log off;
-        add_header Cache-Control "public";
-    }
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+  error_page 404 = /index.php?$query_string;
+  expires 1M;
+  access_log off;
+  add_header Cache-Control "public";
+}
 
     # Deny access to hidden files
     location ~ /\. {
