--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -15,9 +15,9 @@ server {
 	error_log /dev/stdout info;
 	access_log /dev/stdout;
 
-        # Add option for x-forward-for (real ip when behind elb)
-        #real_ip_header X-Forwarded-For;
-        #set_real_ip_from 172.16.0.0/12;
+    # Add option for x-forward-for (real ip when behind elb)
+    #real_ip_header X-Forwarded-For;
+    #set_real_ip_from 172.16.0.0/12;
 
 	location / {
 
@@ -26,22 +26,6 @@ server {
 		try_files $uri $uri/ /index.php?$args;
 	}
 
-	error_page 404 /404.html;
-        location = /404.html {
-                root /var/www/errors;
-                internal;
-        }
-
-        location ^~ /ngd-style.css {
-            alias /var/www/errors/style.css;
-            access_log off;
-        }
-
-        location ^~ /ngd-sad.svg {
-            alias /var/www/errors/sad.svg;
-            access_log off;
-        }
-
 	# pass the PHP scripts to FastCGI server listening on socket
 	#
 	location ~ \.php$ {
@@ -49,33 +33,33 @@ server {
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_pass unix:/var/run/php-fpm.sock;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		fastcgi_index index.php;
 		include fastcgi_params;
 	}
 
-    location ~ ^/(img|cjs|ccss)/ {
-        error_page 404 = /index.php?$query_string;
-        access_log      off;
-        log_not_found   off;
-        #expires         360d;
-        add_header      Cache-Control public,max-age=0,must-revalidate;
-    }
+	location ~ ^/(img|cjs|ccss)/ {
+		error_page 404 = /index.php?$query_string;
+		access_log      off;
+		log_not_found   off;
+		#expires         360d;
+		add_header      Cache-Control public,max-age=0,must-revalidate;
+	}
 
     # Tell the browser to cache the static contents with cache-control
     # Use this as an alternative case if we still have any static contents that isn't being cached.
 
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
-  error_page 404 = /index.php?$query_string;
-  expires 1M;
-  access_log off;
-  add_header Cache-Control "public";
-}
+	location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+		error_page 404 = /index.php?$query_string;
+		expires 1m;
+		access_log off;
+		add_header Cache-Control "public";
+	}
 
-    # Deny access to hidden files
-    location ~ /\. {
-        access_log off;
-        log_not_found off;
-        deny all;
-    }
+	# Deny access to hidden files
+	location ~ /\. {
+		access_log off;
+		log_not_found off;
+		deny all;
+	}
 }
